--- a/en/thank-you.html
+++ b/en/thank-you.html
@@ -3,9 +3,11 @@
 
 
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Askbootstrap">
+    <meta name="author" content="Askbootstrap">
     <title>Thank you</title>
 
     <link rel="stylesheet" type="text/css" href="css/theme-styles.css">
@@ -16,7 +18,7 @@
 
 </head>
 
-<body class="crumina-grid">
+<body id="page-top">
     <div class="main">
         <div class="thank-you-message">
             <h1 class="thank-you">Thank You for contacting us !</h1>
@@ -30,28 +32,15 @@
 
     <!-- End Footer Area -->
 
-    <!-- essential js -->
-    <script src="assets/js/jquery-3.5.1.min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <!-- magnific popup js -->
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <!-- owl carousel js -->
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <!-- form ajazchimp js -->
-    <script src="assets/js/jquery.ajaxchimp.min.js"></script>
-    <!-- form validator js  -->
-    <script src="assets/js/form-validator.min.js"></script>
-    <!-- contact form js -->
-    <script src="assets/js/contact-form-script.js"></script>
-    <!-- meanmenu js -->
-    <script src="assets/js/jquery.meanmenu.min.js"></script>
-    <!-- waypoints js -->
-    <script src="assets/js/jquery.waypoints.js"></script>
-    <!-- counter js -->
-    <script src="assets/js/counter-up.js"></script>
-    <!-- main js -->
-    <script src="assets/js/script.js"></script>
+    <!-- Bootstrap core JavaScript-->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- Core plugin JavaScript-->
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <!-- Owl Carousel -->
+    <script src="vendor/owl-carousel/owl.carousel.js"></script>
+    <!-- Custom scripts for all pages-->
+    <script src="js/custom.js"></script>
 </body>
 
 </html>
