chane all images path

--- a/en/legal.html
+++ b/en/legal.html
@@ -2,19 +2,19 @@
 <html lang="en">
 
 <head>
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/63773c89daff0e1306d8113f/1gi4s8v8j';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
+   <!--Start of Tawk.to Script-->
+   <script type="text/javascript">
+      var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+      (function () {
+         var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+         s1.async = true;
+         s1.src = 'https://embed.tawk.to/63773c89daff0e1306d8113f/1gi4s8v8j';
+         s1.charset = 'UTF-8';
+         s1.setAttribute('crossorigin', '*');
+         s0.parentNode.insertBefore(s1, s0);
+      })();
+   </script>
+   <!--End of Tawk.to Script-->
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -41,7 +41,7 @@ s0.parentNode.insertBefore(s1,s0);
             <i class="fas fa-bars"></i>
          </button> &nbsp;&nbsp;
          <a class="navbar-brand mr-1" href="home.html">
-			<img class="img-fluid" alt="" src="img/logo-en.png"></a>
+            <img class="img-fluid" alt="" src="img/logo-en.png"></a>
       </div>
       <ul class="navbar-nav ml-auto ml-md-0 osahan-right-navbar">
          <li class="nav-item dropdown no-arrow osahan-right-navbar-user">
@@ -122,7 +122,8 @@ s0.parentNode.insertBefore(s1,s0);
             </div>
          </li>
          <li class="nav-item">
-            <a class="nav-link" download="https://arabian-institute.com/plan/english.xlsx" target="_blank" href="https://arabian-institute.com/plan/english.xlsx">
+            <a class="nav-link" download="https://arabian-institute.com/plan/english.xlsx" target="_blank"
+               href="https://arabian-institute.com/plan/english.xlsx">
                <i class="fas fa-fw fa-users"></i>
                <span>Training Plan</span>
             </a>
@@ -176,7 +177,7 @@ s0.parentNode.insertBefore(s1,s0);
                   <div class="col-xl-3 col-sm-6 mb-3">
                      <a href="files/en/1044.pdf" class="video-card">
                         <div class="video-card-image">
-                           <img src="img/inner-pages/legal/4.jpg" class="img-fluid" alt="">
+                           <img src="/assets/images/course-images/legal/4.jpg" class="img-fluid" alt="">
                         </div>
                         <div class="video-card-body video-card-body--inner">
                            <div class="video-title">
@@ -198,7 +199,7 @@ s0.parentNode.insertBefore(s1,s0);
                   <div class="col-xl-3 col-sm-6 mb-3">
                      <a href="files/en/1042.pdf" class="video-card">
                         <div class="video-card-image">
-                           <img src="img/inner-pages/legal/1.jpg" class="img-fluid" alt="">
+                           <img src="/assets/images/course-images/legal/1.jpg" class="img-fluid" alt="">
                         </div>
                         <div class="video-card-body video-card-body--inner">
                            <div class="video-title">
@@ -220,7 +221,7 @@ s0.parentNode.insertBefore(s1,s0);
                   <div class="col-xl-3 col-sm-6 mb-3">
                      <a href="files/en/1041.pdf" class="video-card">
                         <div class="video-card-image">
-                           <img src="img/inner-pages/legal/5.jpg" class="img-fluid" alt="">
+                           <img src="/assets/images/course-images/legal/5.jpg" class="img-fluid" alt="">
                         </div>
                         <div class="video-card-body video-card-body--inner">
                            <div class="video-title">
@@ -242,7 +243,7 @@ s0.parentNode.insertBefore(s1,s0);
                   <div class="col-xl-3 col-sm-6 mb-3">
                      <a href="files/en/1043.pdf" class="video-card">
                         <div class="video-card-image">
-                           <img src="img/inner-pages/legal/3.jpg" class="img-fluid" alt="">
+                           <img src="/assets/images/course-images/legal/3.jpg" class="img-fluid" alt="">
                         </div>
                         <div class="video-card-body video-card-body--inner">
                            <div class="video-title">
@@ -264,7 +265,7 @@ s0.parentNode.insertBefore(s1,s0);
                   <div class="col-xl-3 col-sm-6 mb-3">
                      <a href="files/en/1040.pdf" class="video-card">
                         <div class="video-card-image">
-                           <img src="img/inner-pages/legal/2.jpg" class="img-fluid" alt="">
+                           <img src="/assets/images/course-images/legal/2.jpg" class="img-fluid" alt="">
                         </div>
                         <div class="video-card-body video-card-body--inner">
                            <div class="video-title">
