--- a/en/construction-management.html
+++ b/en/construction-management.html
@@ -2,25 +2,25 @@
 <html lang="en">
 
 <head>
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/63773c89daff0e1306d8113f/1gi4s8v8j';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Askbootstrap">
-    <meta name="author" content="Askbootstrap">
-    <title>Construction Management</title>
+   <!--Start of Tawk.to Script-->
+   <script type="text/javascript">
+      var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+      (function () {
+         var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+         s1.async = true;
+         s1.src = 'https://embed.tawk.to/63773c89daff0e1306d8113f/1gi4s8v8j';
+         s1.charset = 'UTF-8';
+         s1.setAttribute('crossorigin', '*');
+         s0.parentNode.insertBefore(s1, s0);
+      })();
+   </script>
+   <!--End of Tawk.to Script-->
+   <meta charset="utf-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+   <meta name="description" content="Askbootstrap">
+   <meta name="author" content="Askbootstrap">
+   <title>Construction Management</title>
 
    <!-- Favicon Icon -->
    <link rel="icon" type="image/png" href="img/favicon.png">
@@ -42,7 +42,7 @@ s0.parentNode.insertBefore(s1,s0);
             <i class="fas fa-bars"></i>
          </button> &nbsp;&nbsp;
          <a class="navbar-brand mr-1" href="home.html">
-			<img class="img-fluid" alt="" src="img/logo-en.png"></a>
+            <img class="img-fluid" alt="" src="img/logo-en.png"></a>
       </div>
       <ul class="navbar-nav ml-auto ml-md-0 osahan-right-navbar">
          <li class="nav-item dropdown no-arrow osahan-right-navbar-user">
@@ -123,7 +123,8 @@ s0.parentNode.insertBefore(s1,s0);
             </div>
          </li>
          <li class="nav-item">
-            <a class="nav-link" download="https://arabian-institute.com/plan/english.xlsx" target="_blank" href="https://arabian-institute.com/plan/english.xlsx">
+            <a class="nav-link" download="https://arabian-institute.com/plan/english.xlsx" target="_blank"
+               href="https://arabian-institute.com/plan/english.xlsx">
                <i class="fas fa-fw fa-users"></i>
                <span>Training Plan</span>
             </a>
@@ -162,78 +163,80 @@ s0.parentNode.insertBefore(s1,s0);
                <a class="dropdown-item" href="index-ar.html">العربية</a>
                <a class="dropdown-item" href="home.html">English</a>
 
-                </div>
-            </li>
-        </ul>
-        <div class="single-channel-page" id="content-wrapper">
-            <div class="container-fluid">
-                <div class="video-block section-padding">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="main-title">
-                                <h6>Construction Management</h6>
-                            </div>
-                        </div>
-                        <div class="col-xl-3 col-sm-6 mb-3">
-                            <a href="files/en/1630.pdf" class="video-card">
-                                <div class="video-card-image">
-                                    <img src="img/inner-pages/construction-managment/1.jpg" class="img-fluid" alt="">
-                                </div>
-                                <div class="video-card-body video-card-body--inner">
-                                    <div class="video-title">
-                                        <p class="text-dark font-bold text-center">
-                                            FIDIC Contracts Management Practical Use of FIDIC Contracts
-                                        </p>
-                                    </div>
-                                    <div class="d-flex justify-content-between mt-auto">
-                                        <a href="files/en/1630.pdf" class="mr-2">
-                                            <i class="fas fa-2x fa-download"></i>
-                                        </a>
-                                        <a href="mailto:training@arabian-institute.com" class="mr-2">
-                                            <i class="fas fa-2x fa-envelope-open"></i>
-                                        </a>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-xl-3 col-sm-6 mb-3">
-                            <a href="files/en/1629.pdf" class="video-card">
-                                <div class="video-card-image">
-                                    <img src="img/inner-pages/construction-managment/2.jpg" class="img-fluid" alt="">
-                                </div>
-                                <div class="video-card-body video-card-body--inner">
-                                    <div class="video-title">
-                                        <p class="text-dark font-bold text-center">
-                                            FIDIC Claims Management of Claims and Resolution of Disputes
-                                        </p>
-                                    </div>
-                                    <div class="d-flex justify-content-between mt-auto">
-                                        <a href="files/en/1629.pdf" class="mr-2">
-                                            <i class="fas fa-2x fa-download"></i>
-                                        </a>
-                                        <a href="mailto:training@arabian-institute.com" class="mr-2">
-                                            <i class="fas fa-2x fa-envelope-open"></i>
-                                        </a>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
             </div>
-        </div>
-    </div>
-    <!-- End Footer Area -->
+         </li>
+      </ul>
+      <div class="single-channel-page" id="content-wrapper">
+         <div class="container-fluid">
+            <div class="video-block section-padding">
+               <div class="row">
+                  <div class="col-md-12">
+                     <div class="main-title">
+                        <h6>Construction Management</h6>
+                     </div>
+                  </div>
+                  <div class="col-xl-3 col-sm-6 mb-3">
+                     <a href="files/en/1630.pdf" class="video-card">
+                        <div class="video-card-image">
+                           <img src="/assets/images/course-images/construction-managment/1.jpg" class="img-fluid"
+                              alt="">
+                        </div>
+                        <div class="video-card-body video-card-body--inner">
+                           <div class="video-title">
+                              <p class="text-dark font-bold text-center">
+                                 FIDIC Contracts Management Practical Use of FIDIC Contracts
+                              </p>
+                           </div>
+                           <div class="d-flex justify-content-between mt-auto">
+                              <a href="files/en/1630.pdf" class="mr-2">
+                                 <i class="fas fa-2x fa-download"></i>
+                              </a>
+                              <a href="mailto:training@arabian-institute.com" class="mr-2">
+                                 <i class="fas fa-2x fa-envelope-open"></i>
+                              </a>
+                           </div>
+                        </div>
+                     </a>
+                  </div>
+                  <div class="col-xl-3 col-sm-6 mb-3">
+                     <a href="files/en/1629.pdf" class="video-card">
+                        <div class="video-card-image">
+                           <img src="/assets/images/course-images/construction-managment/2.jpg" class="img-fluid"
+                              alt="">
+                        </div>
+                        <div class="video-card-body video-card-body--inner">
+                           <div class="video-title">
+                              <p class="text-dark font-bold text-center">
+                                 FIDIC Claims Management of Claims and Resolution of Disputes
+                              </p>
+                           </div>
+                           <div class="d-flex justify-content-between mt-auto">
+                              <a href="files/en/1629.pdf" class="mr-2">
+                                 <i class="fas fa-2x fa-download"></i>
+                              </a>
+                              <a href="mailto:training@arabian-institute.com" class="mr-2">
+                                 <i class="fas fa-2x fa-envelope-open"></i>
+                              </a>
+                           </div>
+                        </div>
+                     </a>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+   <!-- End Footer Area -->
 
-    <!-- Bootstrap core JavaScript-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- Core plugin JavaScript-->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-    <!-- Owl Carousel -->
-    <script src="vendor/owl-carousel/owl.carousel.js"></script>
-    <!-- Custom scripts for all pages-->
-    <script src="js/custom.js"></script>
+   <!-- Bootstrap core JavaScript-->
+   <script src="vendor/jquery/jquery.min.js"></script>
+   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+   <!-- Core plugin JavaScript-->
+   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+   <!-- Owl Carousel -->
+   <script src="vendor/owl-carousel/owl.carousel.js"></script>
+   <!-- Custom scripts for all pages-->
+   <script src="js/custom.js"></script>
 </body>
 
 </html>
