--- a/en/0.html
+++ b/en/0.html
@@ -1,22 +1,22 @@
 <div class="row">
     <div class="col-md-12">
         <div class="main-title">
-            <h6>It Managment</h6>
+            <h6>Legal</h6>
         </div>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="files/en/1059.pdf" class="video-card">
+        <a href="files/en/1044.pdf" class="video-card">
             <div class="video-card-image">
-                <img src="/assets/images/course-images/it-managment/6.jpg" class="img-fluid" alt="">
+                <img src="/assets/images/course-images/legal/4.jpg" class="img-fluid" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">Cloud Management and Security
-                        Principles and Best Practice
+                    <p class="text-dark font-bold text-center">
+                        TOLES Foundation Certificate in Legal English Skills
                     </p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="files/en/1059.pdf" class="mr-2">
+                    <a href="files/en/1044.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="mr-2">
@@ -27,18 +27,18 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="files/en/1060.pdf" class="video-card">
+        <a href="files/en/1042.pdf" class="video-card">
             <div class="video-card-image">
-                <img src="/assets/images/course-images/it-managment/7.jpg" class="img-fluid" alt="">
+                <img src="/assets/images/course-images/legal/1.jpg" class="img-fluid" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">Digital Forensics and Cyber
-                        Investigations
+                    <p class="text-dark font-bold text-center">
+                        Legal Writing and Drafting Skills
                     </p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="files/en/1060.pdf" class="mr-2">
+                    <a href="files/en/1042.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="mr-2">
@@ -49,17 +49,18 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="files/en/1052.pdf" class="video-card">
+        <a href="files/en/1041.pdf" class="video-card">
             <div class="video-card-image">
-                <img src="/assets/images/course-images/it-managment/8.jpg" class="img-fluid" alt="">
+                <img src="/assets/images/course-images/legal/5.jpg" class="img-fluid" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">Certificate in Data Science
+                    <p class="text-dark font-bold text-center">
+                        Certificate in Business and Commercial Law
                     </p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="files/en/1052.pdf" class="mr-2">
+                    <a href="files/en/1041.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="mr-2">
@@ -70,18 +71,18 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="files/en/1054.pdf" class="video-card">
+        <a href="files/en/1043.pdf" class="video-card">
             <div class="video-card-image">
-                <img src="/assets/images/course-images/it-managment/10.jpg" class="img-fluid" alt="">
+                <img src="/assets/images/course-images/legal/3.jpg" class="img-fluid" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">Certificate in IT Disaster Recovery
-                        Planning
+                    <p class="text-dark font-bold text-center">
+                        Mergers and Acquisitions
                     </p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="files/en/1054.pdf" class="mr-2">
+                    <a href="files/en/1043.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="mr-2">
@@ -92,169 +93,18 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="files/en/1055.pdf" class="video-card">
+        <a href="files/en/1040.pdf" class="video-card">
             <div class="video-card-image">
-                <img src="/assets/images/course-images/it-managment/11.jpg" class="img-fluid" alt="">
+                <img src="/assets/images/course-images/legal/2.jpg" class="img-fluid" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">Certificate in IT Management
-                        Processes
+                    <p class="text-dark font-bold text-center">
+                        Arbitration and Dispute Resolution
                     </p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="files/en/1055.pdf" class="mr-2">
-                        <i class="fas fa-2x fa-download"></i>
-                    </a>
-                    <a href="mailto:training@arabian-institute.com" class="mr-2">
-                        <i class="fas fa-2x fa-envelope-open"></i>
-                    </a>
-                </div>
-            </div>
-        </a>
-    </div>
-    <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="files/en/1053.pdf" class="video-card">
-            <div class="video-card-image">
-                <img src="/assets/images/course-images/it-managment/9.jpg" class="img-fluid" alt="">
-            </div>
-            <div class="video-card-body video-card-body--inner">
-                <div class="video-title">
-                    <p class="text-dark font-bold text-center">Certificate in Information Security
-                        Management Principles
-                    </p>
-                </div>
-                <div class="d-flex justify-content-between mt-auto">
-                    <a href="files/en/1053.pdf" class="mr-2">
-                        <i class="fas fa-2x fa-download"></i>
-                    </a>
-                    <a href="mailto:training@arabian-institute.com" class="mr-2">
-                        <i class="fas fa-2x fa-envelope-open"></i>
-                    </a>
-                </div>
-            </div>
-        </a>
-    </div>
-    <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="files/en/1062.pdf" class="video-card">
-            <div class="video-card-image">
-                <img src="/assets/images/course-images/it-managment/1.jpg" class="img-fluid" alt="">
-            </div>
-            <div class="video-card-body video-card-body--inner">
-                <div class="video-title">
-                    <p class="text-dark font-bold text-center">IT Systems Identity and Access
-                        Management
-                    </p>
-                </div>
-                <div class="d-flex justify-content-between mt-auto">
-                    <a href="files/en/1062.pdf" class="mr-2">
-                        <i class="fas fa-2x fa-download"></i>
-                    </a>
-                    <a href="mailto:training@arabian-institute.com" class="mr-2">
-                        <i class="fas fa-2x fa-envelope-open"></i>
-                    </a>
-                </div>
-            </div>
-        </a>
-    </div>
-    <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="files/en/1061.pdf" class="video-card">
-            <div class="video-card-image">
-                <img src="/assets/images/course-images/it-managment/12.jpg" class="img-fluid" alt="">
-            </div>
-            <div class="video-card-body video-card-body--inner">
-                <div class="video-title">
-                    <p class="text-dark font-bold text-center">IT Auditing and IT Fraud Detection
-                    </p>
-                </div>
-                <div class="d-flex justify-content-between mt-auto">
-                    <a href="files/en/1061.pdf" class="mr-2">
-                        <i class="fas fa-2x fa-download"></i>
-                    </a>
-                    <a href="mailto:training@arabian-institute.com" class="mr-2">
-                        <i class="fas fa-2x fa-envelope-open"></i>
-                    </a>
-                </div>
-            </div>
-        </a>
-    </div>
-    <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="files/en/1063.pdf" class="video-card">
-            <div class="video-card-image">
-                <img src="/assets/images/course-images/it-managment/2.jpg" class="img-fluid" alt="">
-            </div>
-            <div class="video-card-body video-card-body--inner">
-                <div class="video-title">
-                    <p class="text-dark font-bold text-center">Managing IT Projects Effectively
-                    </p>
-                </div>
-                <div class="d-flex justify-content-between mt-auto">
-                    <a href="files/en/1063.pdf" class="mr-2">
-                        <i class="fas fa-2x fa-download"></i>
-                    </a>
-                    <a href="mailto:training@arabian-institute.com" class="mr-2">
-                        <i class="fas fa-2x fa-envelope-open"></i>
-                    </a>
-                </div>
-            </div>
-        </a>
-    </div>
-    <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="files/en/1056.pdf" class="video-card">
-            <div class="video-card-image">
-                <img src="/assets/images/course-images/it-managment/3.jpg" class="img-fluid" alt="">
-            </div>
-            <div class="video-card-body video-card-body--inner">
-                <div class="video-title">
-                    <p class="text-dark font-bold text-center">Certificate in Open-Source
-                        Intelligence (OSINT) Fundamentals
-                    </p>
-                </div>
-                <div class="d-flex justify-content-between mt-auto">
-                    <a href="files/en/1056.pdf" class="mr-2">
-                        <i class="fas fa-2x fa-download"></i>
-                    </a>
-                    <a href="mailto:training@arabian-institute.com" class="mr-2">
-                        <i class="fas fa-2x fa-envelope-open"></i>
-                    </a>
-                </div>
-            </div>
-        </a>
-    </div>
-    <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="files/en/1057.pdf" class="video-card">
-            <div class="video-card-image">
-                <img src="/assets/images/course-images/it-managment/4.jpg" class="img-fluid" alt="">
-            </div>
-            <div class="video-card-body video-card-body--inner">
-                <div class="video-title">
-                    <p class="text-dark font-bold text-center">Certified Big Data and Data Analytics
-                        Practitioner
-                    </p>
-                </div>
-                <div class="d-flex justify-content-between mt-auto">
-                    <a href="files/en/1057.pdf" class="mr-2">
-                        <i class="fas fa-2x fa-download"></i>
-                    </a>
-                    <a href="mailto:training@arabian-institute.com" class="mr-2">
-                        <i class="fas fa-2x fa-envelope-open"></i>
-                    </a>
-                </div>
-            </div>
-        </a>
-    </div>
-    <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="files/en/1058.pdf" class="video-card">
-            <div class="video-card-image">
-                <img src="/assets/images/course-images/it-managment/5.jpg" class="img-fluid" alt="">
-            </div>
-            <div class="video-card-body video-card-body--inner">
-                <div class="video-title">
-                    <p class="text-dark font-bold text-center">Certified Cyber Security Specialist
-                    </p>
-                </div>
-                <div class="d-flex justify-content-between mt-auto">
-                    <a href="files/en/1058.pdf" class="mr-2">
+                    <a href="files/en/1040.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="mr-2">
