--- a/en/legal.html
+++ b/en/legal.html
@@ -233,128 +233,138 @@
                      <tbody class="table-body">
                         <tr>
                            <td class="table-number">
-                              <h6>Code_1764</h6>
+                              <h6>Code_1041</h6>
                            </td>
-                           <a href="files/en/1044.pdf" class="video-card">
-                              <div class="table-product">
-                                 <img src="/assets/images/course-images/legal/4.jpg" class="img-fluid" alt="">
-                              </div>
-                              <div class="video-card-body video-card-body--inner">
-                                 <div class="video-title">
-                                    <p class="text-dark font-bold text-center">
-                                       TOLES Foundation Certificate in Legal English Skills
-                                    </p>
-                                 </div>
-                                 <div class="d-flex justify-content-between mt-auto">
-                                    <a href="files/en/1044.pdf" class="mr-2">
-                                       <i class="fas fa-2x fa-download"></i>
-                                    </a>
-                                    <a href="mailto:training@arabian-institute.com" class="mr-2">
-                                       <i class="fas fa-2x fa-envelope-open"></i>
-                                    </a>
-                                 </div>
-                              </div>
-                           </a>
+                           <td class="table-product">
+                              <img src="/assets/images/course-images/legal/5.jpg" class="img-fluid" alt="">
+                           </td>
+                           <td class="table-category">
+                              <h6>Legal</h6>
+                           </td>
+                           <td class="table-number">
+                              <p class="text-dark font-bold text-center">
+                                 Certificate in Business and Commercial Law
+                              </p>
+                           </td>
+                           <td class="table-price">
+                              <h6>2850 $</h6>
+                           </td>
+                           <td class="table-action">
+                              <a href="details.html" title="View Details" class="icon fas fa-eye"></a>
+                              <a href="files/en/1041.pdf" class="icon wish far fa-file-pdf"></a>
+                              <a href="mailto:Training@mawred-edu.com?subject=Foreign Exchange, Money Markets and Derivatives"
+                                 title="View Details" class="icon wish fas fa-reply-all"></a>
+                              <a href="https://api.whatsapp.com/send?phone=971523315016" title="View Details"
+                                 class="icon wish fab fa-whatsapp"></a>
+                           </td>
                         </tr>
                         <tr>
                            <td class="table-number">
-                              <h6>Code_1764</h6>
+                              <h6>Code_1044</h6>
                            </td>
-                           <a href="files/en/1042.pdf" class="video-card">
-                              <div class="table-product">
-                                 <img src="/assets/images/course-images/legal/1.jpg" class="img-fluid" alt="">
-                              </div>
-                              <div class="video-card-body video-card-body--inner">
-                                 <div class="video-title">
-                                    <p class="text-dark font-bold text-center">
-                                       Legal Writing and Drafting Skills
-                                    </p>
-                                 </div>
-                                 <div class="d-flex justify-content-between mt-auto">
-                                    <a href="files/en/1042.pdf" class="mr-2">
-                                       <i class="fas fa-2x fa-download"></i>
-                                    </a>
-                                    <a href="mailto:training@arabian-institute.com" class="mr-2">
-                                       <i class="fas fa-2x fa-envelope-open"></i>
-                                    </a>
-                                 </div>
-                              </div>
-                           </a>
+                           <td class="table-product">
+                              <img src="/assets/images/course-images/legal/4.jpg" class="img-fluid" alt="">
+                           </td>
+                           <td class="table-category">
+                              <h6>Legal</h6>
+                           </td>
+                           <td class="table-number">
+                              <p class="text-dark font-bold text-center">
+                                 TOLES Foundation Certificate in Legal English Skills
+                              </p>
+                           </td>
+                           <td class="table-price">
+                              <h6>2850 $</h6>
+                           </td>
+                           <td class="table-action">
+                              <a href="details.html" title="View Details" class="icon fas fa-eye"></a>
+                              <a href="files/en/1044.pdf" class="icon wish far fa-file-pdf"></a>
+                              <a href="mailto:Training@mawred-edu.com?subject=Foreign Exchange, Money Markets and Derivatives"
+                                 title="View Details" class="icon wish fas fa-reply-all"></a>
+                              <a href="https://api.whatsapp.com/send?phone=971523315016" title="View Details"
+                                 class="icon wish fab fa-whatsapp"></a>
+                           </td>
                         </tr>
                         <tr>
                            <td class="table-number">
-                              <h6>Code_1764</h6>
+                              <h6>Code_1043</h6>
                            </td>
-                           <a href="files/en/1041.pdf" class="video-card">
-                              <div class="table-product">
-                                 <img src="/assets/images/course-images/legal/5.jpg" class="img-fluid" alt="">
-                              </div>
-                              <div class="video-card-body video-card-body--inner">
-                                 <div class="video-title">
-                                    <p class="text-dark font-bold text-center">
-                                       Certificate in Business and Commercial Law
-                                    </p>
-                                 </div>
-                                 <div class="d-flex justify-content-between mt-auto">
-                                    <a href="files/en/1041.pdf" class="mr-2">
-                                       <i class="fas fa-2x fa-download"></i>
-                                    </a>
-                                    <a href="mailto:training@arabian-institute.com" class="mr-2">
-                                       <i class="fas fa-2x fa-envelope-open"></i>
-                                    </a>
-                                 </div>
-                              </div>
-                           </a>
+                           <td class="table-product">
+                              <img src="/assets/images/course-images/legal/3.jpg" class="img-fluid" alt="">
+                           </td>
+                           <td class="table-category">
+                              <h6>Legal</h6>
+                           </td>
+                           <td class="table-number">
+                              <p class="text-dark font-bold text-center">
+                                 Mergers and Acquisitions
+                              </p>
+                           </td>
+                           <td class="table-price">
+                              <h6>2850 $</h6>
+                           </td>
+                           <td class="table-action">
+                              <a href="details.html" title="View Details" class="icon fas fa-eye"></a>
+                              <a href="files/en/1043.pdf" class="icon wish far fa-file-pdf"></a>
+                              <a href="mailto:Training@mawred-edu.com?subject=Foreign Exchange, Money Markets and Derivatives"
+                                 title="View Details" class="icon wish fas fa-reply-all"></a>
+                              <a href="https://api.whatsapp.com/send?phone=971523315016" title="View Details"
+                                 class="icon wish fab fa-whatsapp"></a>
+                           </td>
                         </tr>
                         <tr>
                            <td class="table-number">
-                              <h6>Code_1764</h6>
+                              <h6>Code_1040</h6>
                            </td>
-                           <a href="files/en/1043.pdf" class="video-card">
-                              <div class="table-product">
-                                 <img src="/assets/images/course-images/legal/3.jpg" class="img-fluid" alt="">
-                              </div>
-                              <div class="video-card-body video-card-body--inner">
-                                 <div class="video-title">
-                                    <p class="text-dark font-bold text-center">
-                                       Mergers and Acquisitions
-                                    </p>
-                                 </div>
-                                 <div class="d-flex justify-content-between mt-auto">
-                                    <a href="files/en/1043.pdf" class="mr-2">
-                                       <i class="fas fa-2x fa-download"></i>
-                                    </a>
-                                    <a href="mailto:training@arabian-institute.com" class="mr-2">
-                                       <i class="fas fa-2x fa-envelope-open"></i>
-                                    </a>
-                                 </div>
-                              </div>
-                           </a>
+                           <td class="table-product">
+                              <img src="/assets/images/course-images/legal/2.jpg" class="img-fluid" alt="">
+                           </td>
+                           <td class="table-category">
+                              <h6>Legal</h6>
+                           </td>
+                           <td class="table-number">
+                              <p class="text-dark font-bold text-center">
+                                 Arbitration and Dispute Resolution
+                              </p>
+                           </td>
+                           <td class="table-price">
+                              <h6>2850 $</h6>
+                           </td>
+                           <td class="table-action">
+                              <a href="details.html" title="View Details" class="icon fas fa-eye"></a>
+                              <a href="files/en/1040.pdf" class="icon wish far fa-file-pdf"></a>
+                              <a href="mailto:Training@mawred-edu.com?subject=Foreign Exchange, Money Markets and Derivatives"
+                                 title="View Details" class="icon wish fas fa-reply-all"></a>
+                              <a href="https://api.whatsapp.com/send?phone=971523315016" title="View Details"
+                                 class="icon wish fab fa-whatsapp"></a>
+                           </td>
                         </tr>
                         <tr>
                            <td class="table-number">
-                              <h6>Code_1764</h6>
+                              <h6>Code_1042</h6>
                            </td>
-                           <a href="files/en/1040.pdf" class="video-card">
-                              <div class="table-product">
-                                 <img src="/assets/images/course-images/legal/2.jpg" class="img-fluid" alt="">
-                              </div>
-                              <div class="video-card-body video-card-body--inner">
-                                 <div class="video-title">
-                                    <p class="text-dark font-bold text-center">
-                                       Arbitration and Dispute Resolution
-                                    </p>
-                                 </div>
-                                 <div class="d-flex justify-content-between mt-auto">
-                                    <a href="files/en/1040.pdf" class="mr-2">
-                                       <i class="fas fa-2x fa-download"></i>
-                                    </a>
-                                    <a href="mailto:training@arabian-institute.com" class="mr-2">
-                                       <i class="fas fa-2x fa-envelope-open"></i>
-                                    </a>
-                                 </div>
-                              </div>
-                           </a>
+                           <td class="table-product">
+                              <img src="/assets/images/course-images/legal/1.jpg" class="img-fluid" alt="">
+                           </td>
+                           <td class="table-category">
+                              <h6>Legal</h6>
+                           </td>
+                           <td class="table-number">
+                              <p class="text-dark font-bold text-center">
+                                 Legal Writing and Drafting Skills
+                              </p>
+                           </td>
+                           <td class="table-price">
+                              <h6>2850 $</h6>
+                           </td>
+                           <td class="table-action">
+                              <a href="details.html" title="View Details" class="icon fas fa-eye"></a>
+                              <a href="files/en/1042.pdf" class="icon wish far fa-file-pdf"></a>
+                              <a href="mailto:Training@mawred-edu.com?subject=Foreign Exchange, Money Markets and Derivatives"
+                                 title="View Details" class="icon wish fas fa-reply-all"></a>
+                              <a href="https://api.whatsapp.com/send?phone=971523315016" title="View Details"
+                                 class="icon wish fab fa-whatsapp"></a>
+                           </td>
                         </tr>
                      </tbody>
                   </table>
