--- a/en/0.html
+++ b/en/0.html
@@ -1,43 +1,220 @@
 <div class="row">
     <div class="col-md-12">
         <div class="main-title">
-            <h6>Pre-Retirement</h6>
+            <h6>Quality and Productivity</h6>
         </div>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="files/en/692.pdf" class="video-card">
+        <a href="files/en/602.pdf" class="video-card">
             <div class="video-card-image">
-                <img src="/assets/images/course-images/pre-retirment/1.jpg" class="img-fluid" alt="">
+                <img src="/assets/images/course-images/quality&productivity/5.jpg" class="img-fluid" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">
-                        Retirement Planning
-                    </p>
+                    <p class="text-dark font-bold text-center">Certified Quality Management
+                        Professional </p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="files/en/692.pdf" class="mr-2">
-                        <i class="fas fa-2x fa-download"></i></a> <a href="mailto:training@arabian-institute.com"
-                        class="mr-2"><i class="fas fa-2x fa-envelope-open"></i></a>
+                    <a href="files/en/602.pdf" class="mr-2">
+                        <i class="fas fa-2x fa-download"></i>
+                    </a>
+                    <a href="mailto:training@arabian-institute.com" class="mr-2">
+                        <i class="fas fa-2x fa-envelope-open"></i>
+                    </a>
                 </div>
             </div>
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="files/en/691.pdf" class="video-card">
+        <a href="files/en/603.pdf" class="video-card">
             <div class="video-card-image">
-                <img src="/assets/images/course-images/pre-retirment/2.jpg" class="img-fluid" alt="">
+                <img src="/assets/images/course-images/quality&productivity/6.jpg" class="img-fluid" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">
-                        Fundamentals of Life Insurance and Retirement Savings
+                    <p class="text-dark font-bold text-center">Certified Six Sigma Yellow Belt </p>
+                </div>
+                <div class="d-flex justify-content-between mt-auto">
+                    <a href="files/en/603.pdf" class="mr-2">
+                        <i class="fas fa-2x fa-download"></i>
+                    </a>
+                    <a href="mailto:training@arabian-institute.com" class="mr-2">
+                        <i class="fas fa-2x fa-envelope-open"></i>
+                    </a>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="col-xl-3 col-sm-6 mb-3">
+        <a href="files/en/605.pdf" class="video-card">
+            <div class="video-card-image">
+                <img src="/assets/images/course-images/quality&productivity/7.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="video-card-body video-card-body--inner">
+                <div class="video-title">
+                    <p class="text-dark font-bold text-center">Process Management Mapping and
+                        Improvement
                     </p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="files/en/691.pdf" class="mr-2">
-                        <i class="fas fa-2x fa-download"></i></a> <a href="mailto:training@arabian-institute.com"
-                        class="mr-2"><i class="fas fa-2x fa-envelope-open"></i></a>
+                    <a href="files/en/605.pdf" class="mr-2">
+                        <i class="fas fa-2x fa-download"></i>
+                    </a>
+                    <a href="mailto:training@arabian-institute.com" class="mr-2">
+                        <i class="fas fa-2x fa-envelope-open"></i>
+                    </a>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="col-xl-3 col-sm-6 mb-3">
+        <a href="files/en/606.pdf" class="video-card">
+            <div class="video-card-image">
+                <img src="/assets/images/course-images/quality&productivity/8.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="video-card-body video-card-body--inner">
+                <div class="video-title">
+                    <p class="text-dark font-bold text-center">Simplification of Work Processes and
+                        Procedures </p>
+                </div>
+                <div class="d-flex justify-content-between mt-auto">
+                    <a href="files/en/606.pdf" class="mr-2">
+                        <i class="fas fa-2x fa-download"></i>
+                    </a>
+                    <a href="mailto:training@arabian-institute.com" class="mr-2">
+                        <i class="fas fa-2x fa-envelope-open"></i>
+                    </a>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="col-xl-3 col-sm-6 mb-3">
+        <a href="files/en/608.pdf" class="video-card">
+            <div class="video-card-image">
+                <img src="/assets/images/course-images/quality&productivity/10.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="video-card-body video-card-body--inner">
+                <div class="video-title">
+                    <p class="text-dark font-bold text-center">Total Quality Management (TQM) Tool
+                        Box for
+                        Continual Improvement
+                    </p>
+                </div>
+                <div class="d-flex justify-content-between mt-auto">
+                    <a href="files/en/608.pdf" class="mr-2">
+                        <i class="fas fa-2x fa-download"></i>
+                    </a>
+                    <a href="mailto:training@arabian-institute.com" class="mr-2">
+                        <i class="fas fa-2x fa-envelope-open"></i>
+                    </a>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="col-xl-3 col-sm-6 mb-3">
+        <a href="files/en/604.pdf" class="video-card">
+            <div class="video-card-image">
+                <img src="/assets/images/course-images/quality&productivity/1.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="video-card-body video-card-body--inner">
+                <div class="video-title">
+                    <p class="text-dark font-bold text-center">Improving Productivity through
+                        Quality
+                        Enhancement and Cost
+                        Reduction </p>
+                </div>
+                <div class="d-flex justify-content-between mt-auto">
+                    <a href="files/en/604.pdf" class="mr-2">
+                        <i class="fas fa-2x fa-download"></i>
+                    </a>
+                    <a href="mailto:training@arabian-institute.com" class="mr-2">
+                        <i class="fas fa-2x fa-envelope-open"></i>
+                    </a>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="col-xl-3 col-sm-6 mb-3">
+        <a href="files/en/607.pdf" class="video-card">
+            <div class="video-card-image">
+                <img src="/assets/images/course-images/quality&productivity/9.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="video-card-body video-card-body--inner">
+                <div class="video-title">
+                    <p class="text-dark font-bold text-center">Strategic Quality Management </p>
+                </div>
+                <div class="d-flex justify-content-between mt-auto">
+                    <a href="files/en/607.pdf" class="mr-2">
+                        <i class="fas fa-2x fa-download"></i>
+                    </a>
+                    <a href="mailto:training@arabian-institute.com" class="mr-2">
+                        <i class="fas fa-2x fa-envelope-open"></i>
+                    </a>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="col-xl-3 col-sm-6 mb-3">
+        <a href="files/en/599.pdf" class="video-card">
+            <div class="video-card-image">
+                <img src="/assets/images/course-images/quality&productivity/2.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="video-card-body video-card-body--inner">
+                <div class="video-title">
+                    <p class="text-dark font-bold text-center">ASQ Approved Lean Six Sigma Green
+                        Belt </p>
+                </div>
+                <div class="d-flex justify-content-between mt-auto">
+                    <a href="files/en/599.pdf" class="mr-2">
+                        <i class="fas fa-2x fa-download"></i>
+                    </a>
+                    <a href="mailto:training@arabian-institute.com" class="mr-2">
+                        <i class="fas fa-2x fa-envelope-open"></i>
+                    </a>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="col-xl-3 col-sm-6 mb-3">
+        <a href="files/en/601.pdf" class="video-card">
+            <div class="video-card-image">
+                <img src="/assets/images/course-images/quality&productivity/4.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="video-card-body video-card-body--inner">
+                <div class="video-title">
+                    <p class="text-dark font-bold text-center">Certified Lean Six Sigma Green Belt
+                    </p>
+                </div>
+                <div class="d-flex justify-content-between mt-auto">
+                    <a href="files/en/601.pdf" class="mr-2">
+                        <i class="fas fa-2x fa-download"></i>
+                    </a>
+                    <a href="mailto:training@arabian-institute.com" class="mr-2">
+                        <i class="fas fa-2x fa-envelope-open"></i>
+                    </a>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="col-xl-3 col-sm-6 mb-3">
+        <a href="files/en/600.pdf" class="video-card">
+            <div class="video-card-image">
+                <img src="/assets/images/course-images/quality&productivity/3.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="video-card-body video-card-body--inner">
+                <div class="video-title">
+                    <p class="text-dark font-bold text-center">ASQ Certified Manager of
+                        QualityOrganizational Excellence
+                        Refresher
+                    </p>
+                </div>
+                <div class="d-flex justify-content-between mt-auto">
+                    <a href="files/en/600.pdf" class="mr-2">
+                        <i class="fas fa-2x fa-download"></i>
+                    </a>
+                    <a href="mailto:training@arabian-institute.com" class="mr-2">
+                        <i class="fas fa-2x fa-envelope-open"></i>
+                    </a>
                 </div>
             </div>
         </a>
