--- a/en/planning-and-development.html
+++ b/en/planning-and-development.html
@@ -727,17 +727,30 @@
         =======================================-->
     <footer class="footer-part">
         <div class="container">
-            <div class="row">
+            <div class="row justify-content-between">
                 <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="footer-content">
-                        <h3>E-mail</h3>
-                        <p class="style1">Training@mawred-edu.com</p>
+                        <h3>Pages</h3>
+                        <ul>
+                            <li class="footer-item"> <a href="category-list-classroom.html" class="style1">Classroom
+                                    Training</a></li>
+                            <li class="footer-item"> <a href="category-list-online.html" class="style1">Online
+                                    Training</a></li>
+                            <li class="footer-item"> <a href="training-plan/en-plan-2022.xlsx" class="style1">Training
+                                    Schedule</a></li>
+                            <li class="footer-item"> <a href="cities.html" class="style1">cities</a></li>
+                            <li class="footer-item"> <a href="price.html" class="style1">Cost</a></li>
+                            <li class="footer-item"> <a href="contact.html" class="style1">Contact Us</a></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="footer-content">
-                        <h3>Phone</h3>
-                        <p class="style1">00971523315016</p>
+                        <h3>Find Us</h3>
+                        <p class="style1 footer-item">Training@mawred-edu.com</p>
+                        <p class="style1 footer-item">00971523315016</p>
+                        <p class="style1 footer-item">Al Hassani Tower - Barsha Heights - Dubai - United Arab Emirates
+                        </p>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-3">
